k8s/fourmiz-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
