k8s/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  namespace: apps
  labels:
    app: engine
spec:
  replicas: 1 # Simulation should only run on a single pod right now to hold unique state
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
      - name: engine
        image: ${IMAGE_ENGINE}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
          - name: fourmiz-data
            mountPath: /data
      volumes:
        - name: fourmiz-data
          persistentVolumeClaim:
            claimName: fourmiz-data
---
apiVersion: v1
kind: Service
metadata:
  name: engine
  namespace: apps
spec:
  selector:
    app: engine
  ports:
  - port: 50051
    targetPort: 50051
    # Note: gRPC requires HTTP/2, which is supported by default in k8s services,
    # but some ingresses may require specific annotations. Here we only talk internal so TCP is fine.
    protocol: TCP
